Fix sidebar overflow

--- a/Views/Components/SidebarView/sidebar.css
+++ b/Views/Components/SidebarView/sidebar.css
@@ -13,5 +13,4 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
   word-wrap: wrap;
-  overflow-x: hidden;
 }
